Name:                Optimizer
Version:             0.0.1
Synopsis:            Algebraic optimizer for X100
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Alexander Ulrich
Maintainer:          alexander.ulrich@uni-tuebingen.de
Category:            Database
Build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  Hs-Source-Dirs:   src
  -- Modules exported by the library.
  Exposed-modules:     Optimizer.X100.OptimizeX100
  
  -- Packages needed in order to build this package.
  Build-depends:       base, haskell98, mtl, containers, TableAlgebra2, fgl
  
  -- Modules not exported by this package.
  Other-modules:       Optimizer.X100.Rewrite.ProjectionMerge
                       Optimizer.X100.Rewrite.ConstOpt
                       Optimizer.X100.Rewrite.SelectionPushdown
                       Optimizer.X100.Rewrite.Normalize
  
Executable x100opt
  Hs-Source-Dirs:   src
  Main-Is: Optimizer/X100/Tools/Opt.hs
  Build-depends:       base, TableAlgebra2
