Name:                 Pathfinder
Version:              0.5.10
Synopsis:             Relational optimiser and code generator
Description:
  The library provides FFI bindings to the Pathfinder relational optimiser and
  code generator. Specifically, the library allows for
  .
  * optimisation of table algebra (a variant of relational algebra) expressions
  .
  * and compilation of table algebra expressions into SQL:1999 queries
  .
  Note that the C source bundle of Pathfinder is also included in this
  package. The C sources are automatically built along with the Haskell FFI
  bindings. There is no need to download and install Pathfinder separately.
  .
  More information about Pathfinder is available from the following web page:
  .
  * <http://db.inf.uni-tuebingen.de/research/pathfinder>
License:              BSD3
License-file:         LICENSE
Author:               George Giorgidze and Nils Schweinsberg
Maintainer:           giorgidze@gmail.com
Stability:            Experimental
Category:             Database, FFI
Build-type:           Custom

Cabal-version:        >= 1.8

Extra-source-files:   pathfinder.tar.gz,
                      include/pathfinder.h

Extra-tmp-files:      pathfinder,
                      pathfinder_pre_build.sh,
                      pathfinder_post_build.sh

Library
  Build-depends:      base        >= 4.3.1.0 && < 5,
                      text        >= 0.11.0.6,
                      bytestring  >= 0.9.1.10
  Hs-source-dirs:     src
  GHC-options:        -Wall -O3
  Include-dirs:       include
  Extra-libraries:    xml2
  Exposed-modules:    Database.Pathfinder
