Name:                Pathfinder
Version:             0.1
Synopsis:            Pathfinder FFI bindings
Description:         Pathfinder FFI bindings
License:             BSD3
License-file:        LICENSE
Author:              Nils Schweinsberg
Maintainer:          mail@n-sch.de
Stability:           Experimental
Category:            Database
Build-type:          Simple

-- Extra-source-files:

Cabal-version:       >=1.2


Library
  Build-depends:     base >= 4
  Hs-Source-Dirs:    src
  GHC-Options:       -Wall
  Extra-libraries: pf_ferry
  Exposed-modules:
    Ferry.Pathfinder
